[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "revmng-mcp"
version = "0.1.0"
description = "MCP server for revmng: revenue-management decisions for AI agents (seat protection, overbooking, pricing, bid prices, charts)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["revmng[plot,network]>=0.2.0", "mcp>=1.0"]
keywords = [
    "mcp", "model-context-protocol", "ai-agents", "revenue-management",
    "yield-management", "pricing", "overbooking", "emsr", "bid-price",
    "airline", "hotel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]

[project.scripts]
revmng-mcp = "revmng_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy", "build"]

[project.urls]
Homepage = "https://github.com/arikanatakan/revmng-mcp"
Repository = "https://github.com/arikanatakan/revmng-mcp"
Issues = "https://github.com/arikanatakan/revmng-mcp/issues"
Library = "https://github.com/arikanatakan/revmng"

[tool.setuptools.packages.find]
include = ["revmng_mcp*"]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
